Add privacy page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,7 +80,7 @@
 </head>
 <body>
     <!-- English Content -->
-    <div class="translation active" lang="en">
+    <div class="translation" lang="en">
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -186,7 +186,8 @@
         <!-- Footer -->
         <footer class="bg-dark text-light py-4">
             <div class="container text-center">
-                <p class="mb-0">&copy; 2024 BL-POS. All rights reserved.</p>
+                <p class="mb-2">&copy; 2024 BL-POS. All rights reserved.</p>
+                <p class="mb-0"><a href="privacy.html" class="text-light text-decoration-none">Privacy Policy</a></p>
             </div>
         </footer>
     </div>
@@ -298,13 +299,14 @@
         <!-- Footer -->
         <footer class="bg-dark text-light py-4">
             <div class="container text-center">
-                <p class="mb-0">&copy; 2024 BL-POS. Tous droits réservés.</p>
+                <p class="mb-2">&copy; 2024 BL-POS. Tous droits réservés.</p>
+                <p class="mb-0"><a href="privacy.html" class="text-light text-decoration-none">Politique de Confidentialité</a></p>
             </div>
         </footer>
     </div>
 
     <!-- Arabic Content -->
-    <div class="translation" lang="ar">
+    <div class="translation active" lang="ar">
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -410,7 +412,8 @@
         <!-- Footer -->
         <footer class="bg-dark text-light py-4">
             <div class="container text-center">
-                <p class="mb-0">&copy; 2024 BL-POS. جميع الحقوق محفوظة.</p>
+                <p class="mb-2">&copy; 2024 BL-POS. جميع الحقوق محفوظة.</p>
+                <p class="mb-0"><a href="privacy.html" class="text-light text-decoration-none">سياسة الخصوصية</a></p>
             </div>
         </footer>
     </div>
@@ -453,6 +456,10 @@
             // Reset scroll position
             window.scrollTo(0, 0);
         }
+
+        // Set initial RTL direction for Arabic
+        document.body.dir = 'rtl';
+        document.body.style.textAlign = 'right';
     </script>
 </body>
 </html>
